k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: berget
  namespace: berget
  annotations:
    external-dns.alpha.kubernetes.io/hostname: berget.cloud.
    external-dns.alpha.kubernetes.io/target: 94.142.251.119 # remove when we have automatic IP assignment
spec:
  ports:
    - port: 80
  type: ClusterIP
  selector:
    app: berget
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: berget
  namespace: berget
spec:
  replicas: 2
  selector:
    matchLabels:
      app: berget
  template:
    metadata:
      labels:
        app: berget
    spec:
      containers:
        - name: berget
          image: ghcr.io/berget-cloud/website:0.1.1 # {"$imagepolicy": "flux-system:berget"}
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
